--- a/stackFile.yml
+++ b/stackFile.yml
@@ -1,25 +1,11 @@
 version: '1.0'
 services:
   - name: adminer
-    type: phpApache
-    version: 5.6
-    extensions:
-      - mysqli
-      - opcache
-      - pdo_dblib
-      - pdo_firebird
-      - pdo_mysql
-      - pdo_pgsql
-    pecl:
-      - mongodb
-    source:
-      type: download
-      url: https://github.com/vrana/adminer/releases/download/v4.6.3/adminer-4.6.3.zip
-    configFiles:
-      - dest: vhost.conf
-        src: ./configs/vhost.conf
+    type: docker
+    image: adminer
+    version: latest
     ports:
-      - 80
+      - 8080
     remoteAccess: true
     deployTo:
       - adminer
