--- a/stackFile.yml
+++ b/stackFile.yml
@@ -1,11 +1,25 @@
 version: '1.0'
 services:
   - name: adminer
-    type: docker
-    image: adminer
-    version: latest
+    type: phpApache
+    version: 7.3
+    extensions:
+      - mysqli
+      - opcache
+      - pdo_dblib
+      - pdo_firebird
+      - pdo_mysql
+      - pdo_pgsql
+    pecl:
+      - mongodb
+    source:
+      type: download
+      url: https://github.com/vrana/adminer/releases/download/v4.7.1/adminer-4.7.1.zip
+    configFiles:
+      - dest: vhost.conf
+        src: ./configs/vhost.conf
     ports:
-      - 8080
+      - 80
     remoteAccess: true
     deployTo:
       - adminer
